# gpu_voxel_planning

./: .gitignore  CMakeLists.txt  README.md  how_to_run.txt  package.xml  test.txt  victor_sim_times.txt
config/: BoxConfig.xml  SampledWorldConfig.xml  VictorSimConfig.xml  VisConfig.xml  test_angles.txt
experiments/: Bookshelf_HOP_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-23__09-39-54  Bookshelf_HOP_MoEBonkers_0.000000_0.000000_0.000000_0.050000_2019-05-23__11-00-02  Bookshelf_HOP_MoE_0.100000_0.100000_0.100000_0.400000_2019-05-23__10-52-46  Bookshelf_HOP_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-23__09-59-43  Bookshelf_Optimistic_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-16__11-03-57  Bookshelf_Optimistic_MoEBonkers_0.000000_0.000000_0.000000_0.050000_2019-05-22__22-09-29  Bookshelf_Optimistic_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-16__11-12-35  Bookshelf_Optimistic_Obstacle_0.100000_0.100000_0.100000_0.400000_2019-05-22__16-27-23  Bookshelf_ParetoCosta10_Bonkers_0.000000_0.000000_0.000000_0.050000_2019-05-22__21-11-56  Bookshelf_ParetoCosta10_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-16__11-06-08  Bookshelf_ParetoCosta10_MoE_0.100000_0.100000_0.100000_0.400000_2019-05-22__22-00-31  Bookshelf_ParetoCosta10_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-16__11-20-01  Bookshelf_ParetoCosta1_Bonkers_0.000000_0.000000_0.000000_0.050000_2019-05-22__21-08-54  Bookshelf_ParetoCosta1_MoE_0.000000_0.000000_0.000000_0.100000_2019-05-22__21-36-33  Bookshelf_ParetoCosta1_MoE_0.100000_0.100000_0.100000_0.400000_2019-05-22__21-59-11  Bookshelf_ParetoCosta1_Obstacle_0.100000_0.100000_0.100000_0.400000_2019-05-22__16-28-27  Bookshelf_QMDP_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-27__11-22-17  Bookshelf_QMDP_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-27__11-50-15  Bookshelf_Thompson_Bonkers_0.000000_0.000000_0.000000_0.050000_2019-05-29__11-49-18  Bookshelf_Thompson_Bonkers_0.000000_0.000000_0.000000_0.050000_2019-05-30__18-59-00  Bookshelf_Thompson_Bonkers_0.000000_0.000000_0.000000_0.050000_2019-05-30__23-46-27  Bookshelf_Thompson_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-30__17-46-03  Bookshelf_Thompson_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-30__17-58-23  Bookshelf_Thompson_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-30__18-03-40  Bookshelf_Thompson_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-30__19-20-55  Bookshelf_Thompson_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-30__20-41-45  Bookshelf_Thompson_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-30__22-52-50  Bookshelf_Thompson_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-31__00-09-38  Bookshelf_Thompson_MoEBonkers_0.000000_0.000000_0.000000_0.050000_2019-05-30__19-19-06  Bookshelf_Thompson_MoEBonkers_0.000000_0.000000_0.000000_0.050000_2019-05-30__20-40-09  Bookshelf_Thompson_MoE_0.000000_0.000000_0.000000_0.100000_2019-05-29__12-12-26  Bookshelf_Thompson_MoE_0.000000_0.000000_0.000000_0.100000_2019-05-30__19-06-37  Bookshelf_Thompson_MoE_0.100000_0.100000_0.100000_0.400000_2019-05-22__22-01-13  Bookshelf_Thompson_MoE_0.100000_0.100000_0.100000_0.400000_2019-05-29__17-16-37  Bookshelf_Thompson_MoE_0.100000_0.100000_0.100000_0.400000_2019-05-30__23-57-41  Bookshelf_Thompson_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-23__09-26-24  Bookshelf_Thompson_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-29__09-38-54  Bookshelf_Thompson_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-30__19-27-07  Bookshelf_Thompson_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-30__23-02-59  Bookshelf_Thompson_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-31__00-15-40  (+59 more)
experiments_real/: Fridge_HOP_Bonkers_0.000000_0.000000_0.000000_0.050000_2019-05-31__03-05-49  Fridge_HOP_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-31__02-49-10  Fridge_HOP_MoE_0.000000_0.000000_0.000000_0.100000_2019-05-31__03-12-39  Fridge_HOP_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-31__02-59-51  Fridge_Optimistic_MoEBonkers_0.000000_0.000000_0.000000_0.050000_2019-05-31__03-16-52  Fridge_Optimistic_MoE_0.000000_0.000000_0.000000_0.100000_2019-05-31__03-07-02  Fridge_Optimistic_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-31__02-55-02  Fridge_ParetoCosta1_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-31__03-44-19  Fridge_ParetoCosta1_MoEBonkers_0.000000_0.000000_0.000000_0.050000_2019-05-31__03-19-13  Fridge_Thompson_MoEBonkers_0.000000_0.000000_0.000000_0.050000_2019-05-31__03-20-52  Fridge_Thompson_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-31__02-58-01  RealEmpty_HOP_CHS_0.000000_0.000000_0.000000_0.000000_2019-05-26__11-51-05  RealEmpty_HOP_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-26__12-02-11  RealEmpty_Optimistic_MoEBonkers_0.000000_0.000000_0.000000_0.050000_2019-05-26__12-36-11  RealEmpty_Optimistic_MoE_0.000000_0.000000_0.000000_0.100000_2019-05-26__12-26-41  RealEmpty_Optimistic_Obstacle_0.100000_0.100000_0.100000_0.400000_2019-05-26__14-31-02  RealEmpty_ParetoCosta1_Bonkers_0.000000_0.000000_0.000000_0.050000_2019-05-26__12-15-06  RealEmpty_ParetoCosta1_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-26__11-56-45  RealEmpty_ParetoCosta1_Obstacle_0.100000_0.100000_0.100000_0.400000_2019-05-26__14-32-59  RealEmpty_Thompson_Bonkers_0.000000_0.000000_0.000000_0.050000_2019-05-26__12-18-43  RealEmpty_Thompson_MoE_0.000000_0.000000_0.000000_0.100000_2019-05-26__12-31-32  RealEmpty_Thompson_MoE_0.100000_0.100000_0.100000_0.400000_2019-05-26__15-29-20  RealEmpty_Thompson_Obstacle_0.000000_0.000000_0.000000_0.100000_2019-05-26__11-59-26  table_Fridgetimings.tex  table_RealTablecost.tex  table_RealTabletimings.tex  table_Refrigeratorcost.tex  table_Refrigeratortimings.tex
gpu_voxel_planning/: CMakeLists.txt  gpu_voxels.rviz  package.xml
gpu_voxel_planning_msgs/: CMakeLists.txt  package.xml
gpu_voxel_planning_msgs/msg/: JointConfig.msg  TSR.msg
gpu_voxel_planning_msgs/srv/: AttemptPathResult.srv  CompleteShape.srv  ContactCompletion.srv  PlanPath.srv  RequestShape.srv  ResetShapeCompleter.srv
(+650 files in other folders)
